@@ -712,8 +712,11 @@
 	  -R .note.gnu.build-id -R .comment"  This has bin fixed in arch/arm/src/Makefile,
 	  but other architectures may have the same problem.  Thanks to Dave Marples
 	  for verifying this.
-	* Began adding support for the MicroMint Eagle100 board.  This board has a
-	  Luminary LM3S6918 Cortex-M3.
+	* Added support for the MicroMint Eagle100 board.  This board has a
+	  Luminary LM3S6918 Cortex-M3. Added a configuration to build examples/ostest.
 	* Add configuration option to enable fast GPIO (vs. legacy, "slow" GPIO) for
 	  LPC214x.
+	* Restructured the arch/arm directory structure to better suppor ARM and
+	  Cortex-M3.
+	* pthread_create() must return a (non-negated) errno value on failure.
 
